--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
+    "@tanstack/react-query-next-experimental": "^5.0.0-alpha.80",
+    "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "recoil": "^0.7.7",
+    "sass": "^1.69.3",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "eslint": "^8",
