--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "dependencies": {
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
-    "@tanstack/react-query-next-experimental": "^5.0.0-alpha.80",
+    "@tanstack/react-query-next-experimental": "^5.0.0",
     "next": "13.5.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
     "sass": "^1.69.3",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
-    "eslint": "^8",
+    "eslint": "^8.51.0",
     "eslint-config-next": "13.5.4"
   }
 }
